[tool.uv]
find-links = ["./driver"]

[tool.uv.sources]
intersystems-irispython = { path = "./driver/intersystems_irispython-3.2.0-py3-none-any.whl" }

[project]
name = "kiss-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "blinker==1.5",
  "certifi==2022.9.24",
  "chardet==5.1.0",
  "charset-normalizer==2.1.1",
  "cryptography==38.0.4",
  "fabric>=3.2.2",
  "fastapi>=0.115.12",
  "filelock==3.9.0",
  "generic-connection-pool>=0.7.0",
  "gitpython>=3.1.44",
  "httplib2==0.20.4",
  "idna==3.3",
  "intersystems-irispython",
  "jaydebeapi>=1.2.3",
  "lazr-restfulclient==0.14.5",
  "lazr-uri==1.0.6",
  "markupsafe==2.1.2",
  "oauthlib==3.2.2",
  "passlib>=1.7.4",
  "pipenv==2022.12.19",
  "platformdirs==2.6.0",
  "pyjwt==2.6.0",
  "pyparsing==3.0.9",
  "pysimplesoap==1.16.2",
  "python-dateutil==2.8.2",
  "python-dotenv>=1.1.0",
  "python-jose>=3.4.0",
  "python-multipart>=0.0.20",
  "pyxdg==0.28",
  "pyyaml>=6.0.2",
  "requests==2.28.1",
  "six==1.16.0",
  "urllib3==1.26.12",
  "uvicorn>=0.34.2",
  "wadllib==1.3.6",
  "xdg==5",
  "gunicorn>=23.0.0",
  "more-itertools>=10.8.0",
]
